# pepperpy-core

./: .cursorrules  .pre-commit-config.yaml  CHANGELOG.md  README.md  ci_cd_pipeline.py  dagger.json  pipeline.py  poetry.toml  pyproject.toml  pytest.ini
.github/workflows/: ci_cd.yml  docs.yml
ci/: __init__.py  main.py
docs/: conf.py  index.md  index.rst  installation.rst  overview.md
docs/api/: cache.rst  config.rst  context.rst  core.rst  dependencies.rst  event.rst  index.rst  module.rst  network.rst  pipeline.rst  plugin.rst  registry.rst  resources.rst  security.rst  serialization.rst  task.rst  telemetry.rst  template.rst  validators.rst
docs/getting-started/: overview.rst  quickstart.rst
docs/modules/: cache.md  callables.md  config.md  context.md  dependencies.md  dev.md  event.md  exceptions.md  generators.md  io.md  logging.md  module.md  network.md  pipeline.md  plugin.md  registry.md  resources.md  security.md  serialization.md  state.md  storage.md  task.md  telemetry.md  template.md  testing.md  types.md  utils.md  validation.md  validators.md
docs/source/: conf.py  contributing.rst  index.rst  overview.rst  quickstart.rst
examples/: README.md  __init__.py  cache_example.py  config_example.py  logging_example.py  module_example.py  validation_example.py
pepperpy/: network.py
pepperpy_core/: __init__.py  cache.py  config.py  dev.py  event.py  exceptions.py  io.py  metric.py  module.py  network.py  pipeline.py  plugin.py  resources.py  security.py  serialization.py  task.py  telemetry.py  types.py  utils.py  validation.py
pepperpy_core/cache/: __init__.py  base.py  config.py
pepperpy_core/config/: __init__.py  base.py  loaders.py
pepperpy_core/db/: config.py  vector.py
pepperpy_core/dev/: __init__.py  testing.py  tools.py
pepperpy_core/events/: base.py  common.py  manager.py  middleware.py  persistence.py
pepperpy_core/exceptions/: base.py
pepperpy_core/logging/: log_config.py  logger.py  settings.py
pepperpy_core/module/: base.py  config.py
pepperpy_core/network/: config.py
pepperpy_core/pipelines/: manager.py
pepperpy_core/plugins/: config.py  manager.py
pepperpy_core/registry/: config.py
pepperpy_core/security/: config.py
pepperpy_core/tasks/: base.py  config.py  manager.py
pepperpy_core/telemetry/: config.py
pepperpy_core/types/: __init__.py  validation.py
pepperpy_core/utils/: error.py
pepperpy_core/validation/: __init__.py  base.py  validators.py
scripts/: check.py  check.sh  format.py  lint.py  test.py  typecheck.py
src/pepperpy_core/: io.py  logging.py  (+2 more)
tests/: conftest.py  test_cache.py  test_callables.py  test_config.py  test_context.py  test_dependencies.py  test_dev.py  test_event.py  test_exceptions.py  test_generators.py  test_io.py  test_logging.py  test_metrics.py  test_module.py  test_network.py  test_pipeline.py  test_plugin.py  test_registry.py  test_resources.py  test_security.py  test_serialization.py  test_task.py  test_tasks.py  test_template.py  test_types.py  test_utils.py  test_validation.py  test_validators.py
to_validate/: base.py
(+11 files in other folders)
