[tool.poetry]
name = "pepperpy-core"
version = "0.1.0"
description = "Core package for PepperPy Framework"
authors = ["Felipe Pimentel <fpimentel88@gmail.com>"]
readme = "README.md"
packages = [{ include = "pepperpy_core" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
pydantic = "^2.6.3"
structlog = "^24.4.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"
dagger-io = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
"pepperpy_core" = ["py.typed"]
